# raydog

./: .gitignore  CLAUDE.md  Makefile  PYPI_README.md  README.md  RELEASING.md  copy-to-gdrive.sh  crt-ray-head-and-worker-nodes.json  customer-simulation-reduced.py  customer-simulation.py  example-node-setup.sh  example-raydog.yaml  format.sh  go.sh  jupyter-demo.ipynb  make-dist-zip.sh  pyproject.toml  ray-sleep.py  raydog-autoscaler.yaml  rayx  requirements-dev.txt  requirements.txt  scale-example.py  setup-ray-node.sh  ssh-tunnel-info.txt  usage-example.py
ansible/: README.md  ansible.cfg  inventory.ini  vars.yml
ansible/playbooks/: create_one_server.yml  (+1 more)
autoscaler/: README.md  copy-to-gdrive.sh  example-node-setup.sh  ray-down.sh  ray-up.sh  raydog-autoscaler.yaml  raydog.yaml
deprecated/: crt-ray-head-and-worker-nodes.json  image-family.json  make-dist-zip.sh  ssh-tunnel-info.txt
docs/: Dockerfile  autoscaler.rst  builder.rst  conf.py  index.rst  prerequisites.rst  yellowdog_ray.raydog.autoscaler.rst  yellowdog_ray.raydog.builder.rst  yellowdog_ray.raydog.rst  yellowdog_ray.rst  yellowdog_ray.utils.rst
examples/: scale-example.py  usage-example.py
ray-jobs/: customer-simulation-original.py  customer-simulation-scaled.py  ray-get-nodes.py
raydog/: autoscaler.py  config.alloy  raydog.py
scripts/: head-node-task-script.sh  node-setup-userdata.sh  observability-node-task-script.sh  private-key  run  secrets.example  setup  sync.sh  worker-node-task-script.sh
src/: raydog.py  raydogclient.py  raydoghead.py  test.py
utils/: ray_ssh_tunnels.py
(+47 files in other folders)
